# DrillRoute_Optimizer_TSP

./: CMakeLists.txt  Optymalizacja-ruchu-wiertarki-pcb.pro  README.md  brdtsploader.cpp  brdtsploader.h  helpers.cpp  helpers.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sa_options.cpp  sa_options.h  sa_options.ui  tsp_problem.cpp  tsp_problem.h
algorithm/: alg_nn.cpp  alg_nn.h  alg_np.cpp  alg_np.h  alg_sa.cpp  alg_sa.h  alg_two_opt.cpp  alg_two_opt.h  ialgorithm.h
example/: test.brd
